@@ -141,14 +141,14 @@
             <version>${netbeans.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.netbeans.api</groupId>
-            <artifactId>org-netbeans-modules-java-hints-test</artifactId>
-            <version>${netbeans.version}</version>
-            <scope>test</scope>
+            <groupId>org.frgaal</groupId>
+            <artifactId>compiler</artifactId>
+            <version>14.0.2</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.netbeans.modules</groupId>
-            <artifactId>org-netbeans-lib-nbjavac</artifactId>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-netbeans-modules-java-hints-test</artifactId>
             <version>${netbeans.version}</version>
             <scope>test</scope>
         </dependency>
@@ -190,63 +190,6 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <useDefaultManifestFile>true</useDefaultManifestFile>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>endorsed</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <outputDirectory>${endorsed.dir}</outputDirectory>
-                    <silent>true</silent>
-                    <artifactItems>
-                        <artifactItem>
-                            <groupId>org.netbeans.api</groupId>
-                            <artifactId>org-netbeans-libs-javacapi</artifactId>
-                            <version>${netbeans.version}</version>
-                        </artifactItem>
-                        <artifactItem>
-                            <groupId>org.netbeans.external</groupId>
-                            <artifactId>nb-javac-api</artifactId>
-                            <version>${netbeans.version}</version>
-                        </artifactItem>
-                        <artifactItem>
-                            <groupId>org.netbeans.modules</groupId>
-                            <artifactId>org-netbeans-libs-javacimpl</artifactId>
-                            <version>${netbeans.version}</version>
-                        </artifactItem>
-                        <artifactItem>
-                            <groupId>org.netbeans.external</groupId>
-                            <artifactId>nb-javac-impl</artifactId>
-                            <version>${netbeans.version}</version>
-                        </artifactItem>
-                    </artifactItems>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerArguments>
-                        <endorseddirs>${endorsed.dir}</endorseddirs>
-                    </compilerArguments>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.13</version>
-                <configuration>
-                    <argLine>-Djava.endorsed.dirs=${endorsed.dir}</argLine>
                 </configuration>
             </plugin>
         </plugins>
